--- a/bloki.css
+++ b/bloki.css
@@ -101,7 +101,6 @@ body {height: 100%;
         "lbuff enat dvat trit stirit pett rbuff";
 
     grid-gap: 5px;
-    scroll-snap-type: proximity;
     background-image: linear-gradient(to bottom, #95acb2, #8aa6af, #80a0ad, #769aab, #6d94a9, #628ca1, #58859a, #4d7d92, #3e7183, #306673, #235a64, #164f55);
 
 }
@@ -153,5 +152,90 @@ body {height: 100%;
 .ladja{
     height: 20%;
     width: 20%;
-    padding-top: 500px;
+    padding-top: 400px;
+}
+
+
+
+/*Valovi*/
+
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap");
+body {
+    min-height: 300px;
+    margin: 0;
+    font-family: "Quicksand", sans-serif;
+}
+
+main {
+    height: 100vh;
+    width: 100vw;
+    position: relative;
+    background: linear-gradient(to right, #b92b27, #1565c0);
+    overflow: hidden;
+}
+
+.header {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.header img {
+    margin: 0;
+    border: 0;
+}
+.header h1 {
+    font-weight: 300;
+    font-size: 3rem;
+    color: white;
+    margin: 0;
+}
+
+.waves {
+    position: absolute;
+    top: 65%;
+    left: 0;
+    width: 100%;
+    height: 40vh;
+}
+
+/* Animation */
+.wave-paths use {
+    animation: move-waves 10s ease-in-out infinite;
+    fill: url(#wave-gradient);
+}
+.wave-paths use:nth-child(odd) {
+    animation-direction: reverse;
+    animation-duration: 13s;
+}
+.wave-paths use:nth-child(1) {
+    animation-delay: -2s;
+    opacity: 0.7;
+}
+.wave-paths use:nth-child(2) {
+    animation-delay: -3s;
+    opacity: 0.5;
+}
+.wave-paths use:nth-child(3) {
+    animation-delay: -4s;
+    opacity: 0.3;
+}
+.wave-paths use:nth-child(4) {
+    animation-delay: -5s;
+}
+
+@keyframes move-waves {
+    0% {
+        transform: translate3d(-30px, 0, 0);
+    }
+    50% {
+        transform: translate3d(30px, 0, 0);
+    }
+    100% {
+        transform: translate3d(-30px, 0, 0);
+    }
 }
