--- a/bloki.css
+++ b/bloki.css
@@ -1,4 +1,3 @@
-
 html { height: 100%; }
 body {height: 100%;
 }
@@ -61,7 +60,7 @@ body {height: 100%;
     width:100%;
     height: 100%;
     grid-template-columns: 1fr 5fr 1fr;
-    grid-template-rows: 1fr 5fr 1fr;
+    grid-template-rows: 70px 5fr 1fr;
     grid-template-areas:
     "a a a"
     "b c c"
