--- a/bloki.css
+++ b/bloki.css
@@ -206,7 +206,7 @@ main {
 /* Animation */
 .wave-paths use {
     animation: move-waves 10s ease-in-out infinite;
-    fill: url(#wave-gradient);
+    fill: url(#lave-gradient);
 }
 .wave-paths use:nth-child(odd) {
     animation-direction: reverse;
@@ -226,6 +226,52 @@ main {
 }
 .wave-paths use:nth-child(4) {
     animation-delay: -5s;
+}
+
+@keyframes move-waves {
+    0% {
+        transform: translate3d(-30px, 0, 0);
+    }
+    50% {
+        transform: translate3d(30px, 0, 0);
+    }
+    100% {
+        transform: translate3d(-30px, 0, 0);
+    }
+}
+
+/* Lawes */
+.laves {
+    position: absolute;
+    top: 65%;
+    left: 0;
+    width: 100%;
+    height: 40vh;
+}
+
+/* Animation */
+.lave-paths use {
+    animation: move-waves 5s ease-in-out infinite;
+    fill: url(#wave-gradient);
+}
+.lave-paths use:nth-child(odd) {
+    animation-direction: reverse;
+    animation-duration: 10s;
+}
+.lave-paths use:nth-child(1) {
+    animation-delay: -1s;
+    opacity: 0.7;
+}
+.lave-paths use:nth-child(2) {
+    animation-delay: -4s;
+    opacity: 0.5;
+}
+.lave-paths use:nth-child(3) {
+    animation-delay: -5s;
+    opacity: 0.3;
+}
+.lave-paths use:nth-child(4) {
+    animation-delay: -6s;
 }
 
 @keyframes move-waves {
