Refactor main page

--- a/bloki.css
+++ b/bloki.css
@@ -1,286 +1,2 @@
 html { height: 100%; }
-body {height: 100%;
-}
-.container {min-height: 100%; min-width: 100%}
-
-.container{
-    display: grid;
-    width:100%;
-    height: 100%;
-    grid-template-columns: 1fr 5fr 1fr;
-    grid-template-rows: 1fr 5fr 1fr;
-    grid-template-areas:
-        "f f f"
-        "m h h"
-        "g g g";
-}
-.header{
-    grid-area:f;
-}
-
-.sidebar {
-    background: #61cc9e;
-    grid-area:m;
-}
-.main-content {
-    background: #ffffff;
-    grid-area:h;
-}
-.footer {
-    grid-area:g;
-    background: purple;
-}
-/********************************/
-#prviVal{
-    position: absolute;
-    display: block;
-}
-#drugiVal{
-    position: absolute;
-}
-
-#tretjiVal{
-    position: absolute;
-}
-
-#cetrtiVal{
-    position: absolute;
-}
-.valovi{
-    width: 100%;
-    height:100%;
-    overflow: visible;
-}
-
-/* Drugi page */
-
-.kontainer {min-height: 100%; min-width: 100%}
-.kontainer{
-    display: grid;
-    width:100%;
-    height: 100%;
-    grid-template-columns: 1fr 5fr 1fr;
-    grid-template-rows: 70px 5fr 1fr;
-    grid-template-areas:
-    "a a a"
-    "b c c"
-    "d d d";
-    position: relative;
-    background-image: linear-gradient(to right top, #7fb9c2, #93c3c8, #a7cece, #bbd8d6, #cee2df, #cadfdc, #c6dbd9, #c2d8d6, #a7c5c8, #8db3bc, #75a0b1, #628ca6);
-
-}
-.keader{
-    grid-area:a;
-}
-
-.kidebar {
-    background: #61cc9e;
-    grid-area:b;
-}
-.kain-content {
-    background: #ffffff;
-    grid-area:c;
-}
-.kooter {
-    grid-area:d;
-    position: relative;
-    overflow: visible;
-}
-
-.montainer{
-    display: grid;
-    width:100%;
-    height: 100%;
-    grid-template-columns: 3fr 2fr 2fr 2fr 2fr 2fr 3fr;
-    grid-template-rows: 2fr 3fr 3fr 2fr;
-    grid-template-areas:
-        "lbuff ena  dva  tri  stiri  pet  rbuff"
-        "lbuff enae dvae trie stirie pete rbuff"
-        "lbuff enad dvad trid stirid petd rbuff"
-        "lbuff enat dvat trit stirit pett rbuff";
-
-    grid-gap: 5px;
-    background-image: linear-gradient(to bottom, #95acb2, #8aa6af, #80a0ad, #769aab, #6d94a9, #628ca1, #58859a, #4d7d92, #3e7183, #306673, #235a64, #164f55);
-
-}
-.leftBuffer, .rightBuffer{
-
-}
-.veliki{
-     background: #994499;
- }
-.mali{
-     background: green;
-     opacity: 0.8;
-     transition:0.2s;
-
- }
-
-.mali:hover {
-    opacity: 1;
-    transform: scale(1.02);
-}
-.krogEna{ grid-area: ena}
-    .krogEnaKvadEna{ grid-area: enae}
-    .krogEnaKvadDva{ grid-area: enad}
-    .krogEnaKvadTri{ grid-area: enat}
-
-.krogDva{ grid-area: dva}
-    .krogDvaKvadEna{ grid-area: dvae}
-    .krogDvaKvadDva{ grid-area: dvad}
-    .krogDvaKvadTri{ grid-area: dvat}
-
-.krogTri{ grid-area: tri}
-    .krogTriKvadEna{ grid-area: trie}
-    .krogTriKvadDva{ grid-area: trid}
-    .krogTriKvadTri{ grid-area: trit}
-
-.krogStiri{ grid-area: stiri}
-    .krogStiriKvadEna{ grid-area: stirie}
-    .krogStiriKvadDva{ grid-area: stirid}
-    .krogStiriKvadTri{ grid-area: stirit}
-
-.krogPet{ grid-area: pet}
-    .krogPetKvadEna{ grid-area: pete}
-    .krogPetKvadDva{ grid-area: petd}
-    .krogPetKvadTri{ grid-area: pett}
-
-.leftBuffer{grid-area: lbuff}
-.rightBuffer{grid-area: rbuff}
-
-.ladja{
-    height: 20%;
-    width: 20%;
-    padding-top: 400px;
-}
-
-
-
-/*Valovi*/
-
-@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap");
-body {
-    min-height: 300px;
-    margin: 0;
-    font-family: "Quicksand", sans-serif;
-}
-
-main {
-    height: 100vh;
-    width: 100vw;
-    position: relative;
-    background: linear-gradient(to right, #b92b27, #1565c0);
-    overflow: hidden;
-}
-
-.header {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.header img {
-    margin: 0;
-    border: 0;
-}
-.header h1 {
-    font-weight: 300;
-    font-size: 3rem;
-    color: white;
-    margin: 0;
-}
-
-.waves {
-    position: absolute;
-    top: 65%;
-    left: 0;
-    width: 100%;
-    height: 40vh;
-}
-
-/* Animation */
-.wave-paths use {
-    animation: move-waves 10s ease-in-out infinite;
-    fill: url(#lave-gradient);
-}
-.wave-paths use:nth-child(odd) {
-    animation-direction: reverse;
-    animation-duration: 13s;
-}
-.wave-paths use:nth-child(1) {
-    animation-delay: -2s;
-    opacity: 0.7;
-}
-.wave-paths use:nth-child(2) {
-    animation-delay: -3s;
-    opacity: 0.5;
-}
-.wave-paths use:nth-child(3) {
-    animation-delay: -4s;
-    opacity: 0.3;
-}
-.wave-paths use:nth-child(4) {
-    animation-delay: -5s;
-}
-
-@keyframes move-waves {
-    0% {
-        transform: translate3d(-30px, 0, 0);
-    }
-    50% {
-        transform: translate3d(30px, 0, 0);
-    }
-    100% {
-        transform: translate3d(-30px, 0, 0);
-    }
-}
-
-/* Lawes */
-.laves {
-    position: absolute;
-    top: 65%;
-    left: 0;
-    width: 100%;
-    height: 40vh;
-}
-
-/* Animation */
-.lave-paths use {
-    animation: move-waves 5s ease-in-out infinite;
-    fill: url(#wave-gradient);
-}
-.lave-paths use:nth-child(odd) {
-    animation-direction: reverse;
-    animation-duration: 10s;
-}
-.lave-paths use:nth-child(1) {
-    animation-delay: -1s;
-    opacity: 0.7;
-}
-.lave-paths use:nth-child(2) {
-    animation-delay: -4s;
-    opacity: 0.5;
-}
-.lave-paths use:nth-child(3) {
-    animation-delay: -5s;
-    opacity: 0.3;
-}
-.lave-paths use:nth-child(4) {
-    animation-delay: -6s;
-}
-
-@keyframes move-waves {
-    0% {
-        transform: translate3d(-30px, 0, 0);
-    }
-    50% {
-        transform: translate3d(30px, 0, 0);
-    }
-    100% {
-        transform: translate3d(-30px, 0, 0);
-    }
-}
+body {height: 100%;}
