--- a/navbar.css
+++ b/navbar.css
@@ -1,22 +1,22 @@
-.keader {
+.our-navbar {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 50px;
-  height: 100%;
+  height: 70px;
+  margin: 0 !important;
 }
 
-.keader .link {
+.our-navbar .link {
   font-size: 16px;
-  margin: 0 20px;
-  color: black;
-  padding: 12px;
+  margin: 0 10px;
+  color: white;
+  padding: 12px 20px;
   transition: background 0.2s;
   cursor: pointer;
+  border-radius: 5px;
 }
 
-.keader .link:hover {
-  background: #00000015;
+.our-navbar .link:hover {
+  background: #00000055;
   text-decoration: none;
-  border-radius: 5px;
 }
